--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.2.4",
+    "next": "^12.2.5",
+    "next-auth": "^4.14.0",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "sharp": "^0.31.1",
     "styled-components": "^5.3.5",
+    "swr": "^1.3.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
