setup initial next-auth and signup endpoints

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
       "@utils/*": ["utils/*"],
       "@public/*": ["public/*"],
       "@hooks/*": ["hooks/*"],
-      "@store/*": ["store/*"]
+      "@store/*": ["store/*"],
+      "@client/*": ["client/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
