update to use next-themes and remove old theme implementation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
       "@public/*": ["public/*"],
       "@hooks/*": ["hooks/*"],
       "@store/*": ["store/*"],
-      "@client/*": ["client/*"]
+      "@client/*": ["client/*"],
+      "@lib/*": ["lib/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
