--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "next": "^12.2.5",
     "next-auth": "^4.14.0",
     "next-themes": "^0.2.1",
