create server api-client and endpoints

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
       "@store/*": ["store/*"],
       "@client/*": ["client/*"],
       "@lib/*": ["lib/*"],
+      "@server/*": ["server/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
