--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:cov": "jest --coverage"
   },
   "dependencies": {
     "axios": "^1.1.3",
@@ -22,6 +24,8 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/node": "18.6.5",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
@@ -29,6 +33,8 @@
     "@types/uuid": "^8.3.4",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "typescript": "4.7.4"
   }
 }
