--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-config-next": "12.2.4",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "mockdate": "^3.0.5",
     "prettier": "^2.8.8",
     "typescript": "4.7.4"
   }
