--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "next": "^12.2.5",
-    "next-auth": "^4.22.1",
+    "next-auth": "^4.14.0",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -31,6 +31,7 @@
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "@types/styled-components": "^5.1.26",
+    "@types/testing-library__react": "^10.2.0",
     "@types/uuid": "^8.3.4",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
