--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "strictNullChecks": true,
     "baseUrl": "./",
     "paths": {
       "@components/*": ["components/*"],
@@ -24,6 +25,7 @@
       "@client/*": ["client/*"],
       "@lib/*": ["lib/*"],
       "@server/*": ["server/*"],
+      "@tests/*": ["tests/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
