--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.0.1",
     "axios": "^1.1.3",
     "next": "^12.2.5",
     "next-auth": "^4.14.0",
