--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.0.1",
+    "@vercel/og": "^0.5.9",
     "axios": "^1.1.3",
     "next": "^12.2.5",
     "next-auth": "^4.14.0",
