--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@vercel/analytics": "^1.0.1",
     "@vercel/og": "^0.5.9",
     "axios": "^1.1.3",
-    "next": "^12.2.5",
+    "next": "^13.4.12",
     "next-auth": "^4.14.0",
     "next-themes": "^0.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "sharp": "^0.31.1",
     "styled-components": "^5.3.5",
@@ -38,7 +38,7 @@
     "@types/testing-library__react": "^10.2.0",
     "@types/uuid": "^8.3.4",
     "eslint": "8.21.0",
-    "eslint-config-next": "12.2.4",
+    "eslint-config-next": "^13.4.12",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "mockdate": "^3.0.5",
